# UAP_ML

./: .pdm-python  README.md  pyproject.toml  requirements.txt
src/: InceptionV3.py  app.py  mobilenetv2.py
