[project]
name = "Praktikum"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "bakso6", email = "gusbahfk@gmail.com"},
]
dependencies = ["Streamlit>=1.41.1", "joblib>=1.4.2", "tensorflow>=2.18.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
src = "src"

[tool.pdm.scripts]
start = "streamlit run ./src/app.py"